@@ -9,8 +9,8 @@ if test -e clasp; then
 	fi
 else
 	echo "unpacking clasp"
-	tar xzf ${TOP_SRCDIR}/clasp-3.0.0-source.tar.gz #--transform 's/clasp-2.1.1/clasp/'
-	mv clasp-3.0.0 clasp
+	tar xzf ${TOP_SRCDIR}/clasp-3.0.1-source.tar.gz
+	mv clasp-3.0.1 clasp
 
 	echo "configuring clasp"
 	mkdir -p clasp/build/fpic
